# youtube2text

./: .gitignore  README.md  main.py  pyproject.toml
